refactor: move code into src folder

--- a/serverless/gateway/serverless.gateway.yml
+++ b/serverless/gateway/serverless.gateway.yml
@@ -4,4 +4,4 @@ supergraph-gateway:
         cors: true
         method: POST
         path: /graphql
-  handler: gateway/index.default
+  handler: gateway/src/index.default
