--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
 .webpack
 node_modules
 
-serverless/gateway/supergraph.json*
-
-serverless/subgraphs/inventory/inventory.json*
-serverless/subgraphs/products/products.json*
-serverless/subgraphs/users/users.json*
+**/src/*.json
+**/src/*.json.d.ts
