--- a/serverless/gateway/package.json
+++ b/serverless/gateway/package.json
@@ -9,8 +9,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@apollo/gateway": "^0.42.0",
-    "apollo-server-lambda": "^3.3.0",
-    "graphql": "^15.6.0"
+    "@apollo/gateway": "0.42.0",
+    "apollo-server-lambda": "3.3.0",
+    "graphql": "15.6.0"
   }
 }
