--- a/serverless/package.json
+++ b/serverless/package.json
@@ -7,11 +7,11 @@
     "build": "npm run build:schema-ast"
   },
   "devDependencies": {
-    "graphql-tag": "^2.12.5",
-    "serverless": "^2.59.0",
-    "serverless-offline": "^8.2.0",
-    "serverless-webpack": "^5.5.4",
-    "ts-loader": "^9.2.6",
-    "typescript": "^4.4.3"
+    "graphql-tag": "2.12.5",
+    "serverless": "2.59.0",
+    "serverless-offline": "8.2.0",
+    "serverless-webpack": "5.5.4",
+    "ts-loader": "9.2.6",
+    "typescript": "4.4.3"
   }
 }
