--- a/serverless/subgraphs/users/package.json
+++ b/serverless/subgraphs/users/package.json
@@ -9,8 +9,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@apollo/federation": "^0.33.0",
-    "apollo-server-lambda": "^3.3.0",
-    "graphql": "^15.6.0"
+    "@apollo/federation": "0.33.0",
+    "apollo-server-lambda": "3.3.0",
+    "graphql": "15.6.0"
   }
 }
