--- a/serverless/package.json
+++ b/serverless/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "graphql-tag": "2.12.5",
+    "lerna": "^4.0.0",
     "serverless": "2.59.0",
     "serverless-offline": "8.2.0",
     "serverless-webpack": "5.5.4",
