--- a/serverless/package.json
+++ b/serverless/package.json
@@ -14,6 +14,7 @@
     "@graphql-codegen/typescript-resolvers": "2.2.1",
     "graphql-tag": "2.12.5",
     "lerna": "^4.0.0",
+    "prettier": "2.4.1",
     "serverless": "2.59.0",
     "serverless-offline": "8.2.0",
     "serverless-webpack": "5.5.4",
