--- a/serverless/package.json
+++ b/serverless/package.json
@@ -7,7 +7,8 @@
     "build": "npm run build:schema-ast",
     "build:codegen": "graphql-codegen --config graphql-codegen.yml",
     "prettier": "prettier",
-    "prettier:fix": "prettier --write ."
+    "prettier:fix": "prettier --write .",
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.2.0",
