--- a/serverless/subgraphs/users/package.json
+++ b/serverless/subgraphs/users/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/federation": "0.33.0",
     "apollo-server-lambda": "3.3.0",
-    "graphql": "15.6.0"
+    "graphql": "15.6.0",
+    "schema-users": "^0.0.0"
   }
 }
