--- a/schema/graphql-codegen.yml
+++ b/schema/graphql-codegen.yml
@@ -1,7 +1,7 @@
 documents: null
 
 generates:
-  ./subgraphs/inventory/src/inventory.d.ts:
+  ./schema-inventory/src/inventory.d.ts:
     config:
       federation: true
       immutableTypes: true
@@ -10,9 +10,9 @@ generates:
     plugins:
       - typescript
       - typescript-resolvers
-    schema: subgraphs/inventory/src/*.graphql
+    schema: schema-inventory/src/*.graphql
 
-  ./subgraphs/products/src/products.d.ts:
+  ./schema-products/src/products.d.ts:
     config:
       federation: true
       immutableTypes: true
@@ -21,9 +21,9 @@ generates:
     plugins:
       - typescript
       - typescript-resolvers
-    schema: subgraphs/products/src/*.graphql
+    schema: schema-products/src/*.graphql
 
-  ./subgraphs/users/src/users.d.ts:
+  ./schema-users/src/users.d.ts:
     config:
       federation: true
       immutableTypes: true
@@ -32,7 +32,7 @@ generates:
     plugins:
       - typescript
       - typescript-resolvers
-    schema: subgraphs/users/src/*.graphql
+    schema: schema-users/src/*.graphql
 
 hooks:
   afterOneFileWrite:
