--- a/schema/supergraph.yaml
+++ b/schema/supergraph.yaml
@@ -2,12 +2,12 @@ subgraphs:
   inventory:
     routing_url: http://localhost:4000/inventory
     schema:
-      file: subgraphs/inventory.graphql
+      file: schema-inventory/src/inventory.graphql
   products:
     routing_url: http://localhost:4000/products
     schema:
-      file: subgraphs/products.graphql
+      file: schema-products/src/products.graphql
   users:
     routing_url: http://localhost:4000/users
     schema:
-      file: subgraphs/users.graphql
+      file: schema-users/src/users.graphql
