--- a/serverless/gateway/package.json
+++ b/serverless/gateway/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/gateway": "0.42.0",
     "apollo-server-lambda": "3.3.0",
-    "graphql": "15.6.0"
+    "graphql": "15.6.0",
+    "schema-gateway": "^0.0.0"
   }
 }
