--- a/schema/tsconfig.json
+++ b/schema/tsconfig.json
@@ -9,7 +9,7 @@
     "noEmitOnError": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
-    "strict": false,
+    "strict": true,
     "target": "ES2020",
     "useDefineForClassFields": true
   }
