--- a/serverless/tsconfig.json
+++ b/serverless/tsconfig.json
@@ -7,7 +7,7 @@
     "noEmitOnError": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
-    "strict": false,
+    "strict": true,
     "target": "ES2020",
     "useDefineForClassFields": true
   }
