--- a/serverless/tsconfig.json
+++ b/serverless/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "esModuleInterop": true,
+    // "exactOptionalPropertyTypes": true, TODO FIXME
     "forceConsistentCasingInFileNames": true,
     "module": "CommonJS",
     "moduleResolution": "Node",
