fix: activate exactOptionalPropertyTypes

--- a/serverless/tsconfig.json
+++ b/serverless/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "esModuleInterop": true,
-    // "exactOptionalPropertyTypes": true, TODO FIXME
+    "exactOptionalPropertyTypes": true,
     "forceConsistentCasingInFileNames": true,
     "module": "CommonJS",
     "moduleResolution": "Node",
