--- a/schema/tsconfig.json
+++ b/schema/tsconfig.json
@@ -3,7 +3,7 @@
     "declaration": true,
     "declarationMap": true,
     "esModuleInterop": true,
-    // "exactOptionalPropertyTypes": true, TODO FIXME
+    "exactOptionalPropertyTypes": true,
     "forceConsistentCasingInFileNames": true,
     "module": "CommonJS",
     "moduleResolution": "Node",
