--- a/schema/package.json
+++ b/schema/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "lerna run build",
     "build:schema-ast": "node .scripts/buildSchemaAstFromSdl.mjs",
     "build:codegen": "graphql-codegen --config graphql-codegen.yml",
     "build:supergraph-schema": "rover supergraph compose --config supergraph.yaml > schema-gateway/src/supergraph-gateway.graphql",
+    "copy": "lerna run copy",
     "prettier": "prettier",
     "prettier:fix": "prettier --write .",
     "typecheck": "tsc --noEmit"
@@ -19,6 +21,7 @@
     "@graphql-codegen/typescript": "2.2.2",
     "@graphql-codegen/typescript-resolvers": "2.2.1",
     "copyfiles": "2.4.1",
+    "lerna": "4.0.0",
     "prettier": "2.4.1",
     "rimraf": "3.0.2",
     "typescript": "4.4.3"
