chore: schmema build scripts

--- a/schema/graphql-codegen.yml
+++ b/schema/graphql-codegen.yml
@@ -1,7 +1,7 @@
 documents: null
 
 generates:
-  ./schema-inventory/src/inventory.d.ts:
+  ./schema-inventory/src/inventory.ts:
     config:
       federation: true
       immutableTypes: true
@@ -12,7 +12,7 @@ generates:
       - typescript-resolvers
     schema: schema-inventory/src/*.graphql
 
-  ./schema-products/src/products.d.ts:
+  ./schema-products/src/products.ts:
     config:
       federation: true
       immutableTypes: true
@@ -23,7 +23,7 @@ generates:
       - typescript-resolvers
     schema: schema-products/src/*.graphql
 
-  ./schema-users/src/users.d.ts:
+  ./schema-users/src/users.ts:
     config:
       federation: true
       immutableTypes: true
