--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ dist
 node_modules
 
 
+**/schema-gateway/src/supergraph-gateway.graphql
 **/schema-inventory/src/inventory.ts
 **/schema-products/src/products.ts
 **/schema-users/src/users.ts
