--- a/serverless/subgraphs/products/serverless.products.yml
+++ b/serverless/subgraphs/products/serverless.products.yml
@@ -3,6 +3,6 @@ subgraph-products:
     - http:
         # cors: true
         method: POST
-        path: products
+        path: /products
         # private: true
   handler: subgraphs/products/src/index.default
