--- a/schema/schema-products/package.json
+++ b/schema/schema-products/package.json
@@ -8,6 +8,7 @@
     "copy": "copyfiles --up 1 src/products.{json*,graphql} dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "sideEffects": false,
   "author": "",
   "license": "MIT",
   "dependencies": {
