--- a/serverless/package.json
+++ b/serverless/package.json
@@ -9,9 +9,9 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "lerna": "^4.0.0",
+    "lerna": "4.0.0",
     "prettier": "2.4.1",
-    "serverless": "2.61.0",
+    "serverless": "2.62.0",
     "serverless-offline": "8.2.0",
     "serverless-webpack": "5.5.4",
     "ts-loader": "9.2.6",
