--- a/serverless/subgraphs/users/package.json
+++ b/serverless/subgraphs/users/package.json
@@ -9,9 +9,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@apollo/federation": "0.33.0",
+    "@apollo/federation": "0.33.1",
     "apollo-server-lambda": "3.3.0",
     "graphql": "15.6.1",
-    "schema-users": "^0.0.0"
+    "schema-users": "0.0.0"
   }
 }
